--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-  width: 100%;
-  height: 100%;
 }
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  width: 100%;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
 h1 {
@@ -39,27 +37,8 @@ h1 {
 
 a {
   color: bisque;
-  text-decoration: none;
-  border-radius: 25px;
-  padding: 10px 20px;
 }
 
 a:hover {
-  background-color: burlywood;
-  border-radius: 25px;
-  padding: 10px 20px;
-}
-
-header{
-  margin-top: auto;
-}
-
-ul{
-  list-style: none;
-  display: flex;
-  justify-content: start;
-}
-
-li:not(:first-child){
-  margin-left: 50px;
+  color: burlywood;
 }
