--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,7 +5,7 @@
   border: none;
   font: inherit;
   cursor: pointer;
-  background-color: #e2e5e8;
+  background-color: #c2c2c3;
   color: inherit;
 }
 
